@@ -17,6 +17,8 @@ Open Vehicle Monitor System v3 - Change log
     OvmsMetrics.Value                   -- Optionally specify a unit (and make 'decode' work) and to get values with units.
     OvmsMetrics.GetValues               -- Optionally specify a unit to get values with units. 
     OvmsMetrics.AsFloat                 -- Optionally specify a unit
+  New DukTape function
+    OvmsMetrics.HasValue                -- Returns true if the metric has a valid value.
 
 2022-09-01 MWJ  3.3.003  OTA release
 - Toyota RAV4 EV: Initial support added. Only the Tesla bus is decoded and just listening so far.
